--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img alt="logo" src="Logo.svg">
+        <img alt="logo" src="images/Logo.svg">
         <div class="header">
             <div class="contact">
                 <div class="info">
@@ -48,6 +48,24 @@
             </button>
         </div>
     </header>
+    <section>
+        <img class="element" src="images/Element.svg">
+        <div class="showcase-section">
+            <div class="showcase">
+                <h1>
+                    We Provide The Best Business Solutions
+                </h1>
+                <p>
+                    Establish your vision and value proposition and turn them into testable prototypes.
+                </p>
+                <div class="showcase-buttons-section">
+                    <a class="login-button" href="#">Get Consulting <i class="fa-solid fa-arrow-up-right"></i></a>
+                    <a id="learn-more" class="login-button" href="#">Learn More<i class="fa-solid fa-arrow-up-right"></i></a>
+                </div>
+            </div>
+            <img src="images/Image.png">
+        </div>
+    </section>
     <script>
         function myFunction() {
             if (document.getElementById("nav").style.display != "block"){
