Desktop version of about section finished

--- a/index.html
+++ b/index.html
@@ -130,6 +130,36 @@
             </div>
         </div>
     </section>
+    <section class="about-section">
+        <div class="woman-container">
+            <img class="woman" alt="woman" src="images/woman.png">
+            <img class="element" alt="decorative lines" src="images/EWlement.svg">
+            <div class="founder">
+                <h4>
+                    Samantha Brown, <span>Founder</span>
+                </h4>
+                <p>
+                    "Lorem ipsum dolor sit amet consectetur adipisicing elit."
+                </p>
+            </div>
+        </div>
+        <div class="about-container">
+            <h6>
+                About Company
+            </h6>
+            <h2>
+                We Are Business Consulting & Credit Repair Experts
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam officiis quas assumenda esse obcaecati? Ex esse error voluptates iure vel totam eos. <br><br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis esse quasi incidunt adipisci accusantium libero provident voluptate amet.
+            </p>
+            <div class="about-buttons">
+                <a id="learn-more" class="login-button" href="#">Learn More<i class="fa-solid fa-arrow-up-right"></i></a>
+                <button type="button"><i class="fa-solid fa-play"></i></button>
+                <p>Intro Video</p>
+            </div>
+        </div>
+    </section>
     <script>
         function myFunction() {
             if (document.getElementById("nav").style.display != "block"){
