Services section finished

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </p>
                 <div class="showcase-buttons-section">
                     <a class="login-button" href="#">Get Consulting <i class="fa-solid fa-arrow-up-right"></i></a>
-                    <a id="learn-more" class="login-button" href="#">Learn More<i class="fa-solid fa-arrow-up-right"></i></a>
+                    <a class="login-button learn-more" href="#">Learn More<i class="fa-solid fa-arrow-up-right"></i></a>
                 </div>
             </div>
             <img src="images/Image.png">
@@ -158,6 +158,64 @@
                 <button type="button"><i class="fa-solid fa-play"></i></button>
                 <p>Intro Video</p>
             </div>
+        </div>
+    </section>
+    <section class="services-section">
+        <img class="element" alt="decorative lines" src="images/Rectangle607.svg">
+        <div class="services-container">
+            <h6>
+                Our Services
+            </h6>
+            <h2>
+                We Provide The Best Service For Consulting
+            </h2>
+            <div class="services-grid">
+                <div class="services-grid-container">
+                    <h4>
+                        Business Advice
+                    </h4>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.
+                    </p>
+                    <div>
+                        <a href="#"><i class="fa-light fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="services-grid-container startup">
+                    <h4>
+                        Startup Business
+                    </h4>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.
+                    </p>
+                    <div>
+                        <a href="#"><i class="fa-light fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="services-grid-container">
+                    <h4>
+                        Financial Advice
+                    </h4>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.
+                    </p>
+                    <div>
+                        <a href="#"><i class="fa-light fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="services-grid-container">
+                    <h4>
+                        Risk Management
+                    </h4>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.
+                    </p>
+                    <div>
+                        <a href="#"><i class="fa-light fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <a class="login-button learn-more" href="#">Browse Services<i class="fa-solid fa-arrow-up-right"></i></a>
         </div>
     </section>
     <script>
