Choose us section finished

--- a/index.html
+++ b/index.html
@@ -218,6 +218,76 @@
             <a class="login-button learn-more" href="#">Browse Services<i class="fa-solid fa-arrow-up-right"></i></a>
         </div>
     </section>
+    <section class="choose-us-section">
+        <div class="box">
+
+        </div>
+        <div class="choose-us-container">
+            <div class="choose-us-header">
+                <h6>
+                    Why Choose Us
+                </h6>
+                <h2>
+                    Why We Are The Best Business Consulting Agency
+                </h2>
+                <div class="choose-us-grid">
+                    <div class="choose-us-header-container">
+                        <div class="icon">
+                            <i class="fa-light fa-thumbs-up"></i>
+                        </div>
+                        <div class="text">
+                            <h4>
+                                Process Excellence
+                            </h4>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="choose-us-header-container">
+                        <div class="icon">
+                            <i class="fa-light fa-hexagon"></i>
+                        </div>
+                        <div class="text">
+                            <h4>
+                                Strategic Planning
+                            </h4>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="choose-us-header-container">
+                        <div class="icon">
+                            <i class="fa-light fa-pen-nib"></i>
+                        </div>
+                        <div class="text">
+                            <h4>
+                                Experience Design
+                            </h4>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="choose-us-header-container">
+                        <div class="icon">
+                            <i class="fa-light fa-head-side-gear"></i>
+                        </div>
+                        <div class="text">
+                            <h4>
+                                Artificial Intelligence
+                            </h4>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        <img alt="two women chatting" src="images/two-women.png">
+        </div>
+    </section>
     <script>
         function myFunction() {
             if (document.getElementById("nav").style.display != "block"){
