Team section finished

--- a/index.html
+++ b/index.html
@@ -219,9 +219,7 @@
         </div>
     </section>
     <section class="choose-us-section">
-        <div class="box">
-
-        </div>
+        <div class="box"></div>
         <div class="choose-us-container">
             <div class="choose-us-header">
                 <h6>
@@ -286,6 +284,115 @@
                 </div>
             </div>
         <img alt="two women chatting" src="images/two-women.png">
+        </div>
+    </section>
+    <section class="projects-section">
+        <div class="projects-section-container">
+            <h6>
+                Project & Case Studies
+            </h6>
+            <h2>
+                Let's Look At Our Global Projects
+            </h2>
+            <div class="projects-grid">
+                <div class="projects-grid-container">
+                    <img alt="Person reading a business paper" src="images/project1.png">
+                    <h4>
+                        Grow your business
+                    </h4>
+                    <div>
+                        <a href="#">Read More <i class="fa-solid fa-arrow-up-right"></i></a>
+                    </div>
+                </div>
+                <div class="projects-grid-container">
+                    <img alt="iPad" src="images/project2.png">
+                    <h4>
+                        Why your client needs a responsive website
+                    </h4>
+                    <div>
+                        <a href="#">Read More <i class="fa-solid fa-arrow-up-right"></i></a>
+                    </div>
+                </div>
+                <div class="projects-grid-container">
+                    <img alt="Notebook" src="images/project3.png">
+                    <h4>
+                        Educate your employees to get better results
+                    </h4>
+                    <div>
+                        <a href="#">Read More <i class="fa-solid fa-arrow-up-right"></i></a>
+                    </div>
+                </div>
+                <div class="projects-grid-container">
+                    <img alt="Laptop" src="images/project4.png">
+                    <h4>
+                        Business Insights is an important piece of your business
+                    </h4>
+                    <div>
+                        <a href="#">Read More <i class="fa-solid fa-arrow-up-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <a class="login-button learn-more" href="#">All Recent Projects<i class="fa-solid fa-arrow-up-right"></i></a>
+        </div>
+    </section>
+    <section class="team-section">
+        <div class="team-section-container">
+            <div class="team-header">
+                <div class="team-header-container">
+                    <h6>
+                        Meet Our Team
+                    </h6>
+                    <h2>
+                        Experience Team Members
+                    </h2>
+                </div>
+                <a class="login-button learn-more" href="#">Browse Team<i class="fa-solid fa-arrow-up-right"></i></a>
+            </div>
+            <div class="team-grid">
+                <div class="team-grid-container">
+                    <img alt="Kristine" src="images/Kristine.png">
+                    <h4>
+                        Kristine Palmer
+                    </h4>
+                    <p>
+                        Chief Operation Officer
+                    </p>
+                </div>
+                <div class="team-grid-container">
+                    <img alt="Mark" src="images/Mark.png">
+                    <h4>
+                        Mark Aubri
+                    </h4>
+                    <p>
+                        Senior Consultant
+                    </p>
+                </div>
+                <div class="team-grid-container">
+                    <img alt="Kimberly" src="images/Kimberly.png">
+                    <h4>
+                        Kimberly Hansen
+                    </h4>
+                    <p>
+                        Senior Consultant
+                    </p>
+                </div>
+                <div class="team-grid-container">
+                    <img alt="Justin" src="images/Justin.png">
+                    <h4>
+                        Justin Willoman
+                    </h4>
+                    <p>
+                        Senior Tech Consultant
+                    </p>
+                </div>
+            </div>
+            <div class="dot-container">
+                <button></button>
+                <button id="here"></button>
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
         </div>
     </section>
     <script>
