Testimonial section finished

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam officiis quas assumenda esse obcaecati? Ex esse error voluptates iure vel totam eos. <br><br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis esse quasi incidunt adipisci accusantium libero provident voluptate amet.
             </p>
             <div class="about-buttons">
-                <a id="learn-more" class="login-button" href="#">Learn More<i class="fa-solid fa-arrow-up-right"></i></a>
+                <a class="login-button black" href="#">Learn More<i class="fa-solid fa-arrow-up-right"></i></a>
                 <button type="button"><i class="fa-solid fa-play"></i></button>
                 <p>Intro Video</p>
             </div>
@@ -332,7 +332,7 @@
                     </div>
                 </div>
             </div>
-            <a class="login-button learn-more" href="#">All Recent Projects<i class="fa-solid fa-arrow-up-right"></i></a>
+            <a class="login-button black" href="#">All Recent Projects<i class="fa-solid fa-arrow-up-right"></i></a>
         </div>
     </section>
     <section class="team-section">
@@ -393,6 +393,82 @@
                 <button></button>
                 <button></button>
             </div>
+        </div>
+    </section>
+    <section class="testimonial-section">
+        <div class="testimonial-section-container">
+            <h6>
+                Testimonial
+            </h6>
+            <h2>
+                What Our Client Says
+            </h2>
+            <div class="testimonial-grid">
+                <div class="testimonial-grid-container">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <p>
+                        "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium libero, ad dignissimos velit qui, dolorum obcaecati cum saepe nesciunt nemo eligendi numquam voluptate"
+                    </p>
+                    <div class="name">
+                        <img src="images/Ellipse1.png" alt="Cassandra">
+                        <div>
+                            <h4>
+                                Cassandra Warren
+                            </h4>
+                            <p>
+                                Business Manager, Dorfus
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-grid-container">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <p>
+                        "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium libero, ad dignissimos velit qui, dolorum obcaecati cum saepe nesciunt nemo eligendi numquam voluptate"
+                    </p>
+                    <div class="name">
+                        <img src="images/Ellipse2.png" alt="Amanda">
+                        <div>
+                            <h4>
+                                Amanda Tulling
+                            </h4>
+                            <p>
+                                Senior Developer, Square
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-grid-container">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <p>
+                        "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium libero, ad dignissimos velit qui, dolorum obcaecati cum saepe nesciunt nemo eligendi numquam voluptate"
+                    </p>
+                    <div class="name">
+                        <img src="images/Ellipse3.png" alt="Jack">
+                        <div>
+                            <h4>
+                                Jack McDogglas
+                            </h4>
+                            <p>
+                                Key Account Manager, Gobona
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a class="login-button black" href="#">All Reviews<i class="fa-solid fa-arrow-up-right"></i></a>
         </div>
     </section>
     <script>
