News section finished

--- a/index.html
+++ b/index.html
@@ -471,6 +471,75 @@
             <a class="login-button black" href="#">All Reviews<i class="fa-solid fa-arrow-up-right"></i></a>
         </div>
     </section>
+    <section class="news-section">
+        <div class="news-section-container">
+            <div class="news-header">
+                <div class="news-header-container">
+                    <h6>
+                        Articles & News
+                    </h6>
+                    <h2>
+                        Get Every Single Article & News
+                    </h2>
+                </div>
+                <a class="login-button learn-more" href="#">Browse Articles<i class="fa-solid fa-arrow-up-right"></i></a>
+            </div>
+            <div class="news-grid">
+                <a class="news-grid-container" href="#">
+                    <div class="date">
+                        <h4>25 <span>Mar</span></h4>
+                    </div>
+                    <img src="images/Classroom.png" alt="Woman in classroom">
+                    <p>
+                        Business
+                    </p>
+                    <h4>
+                        How To Use Digitalization In The Classroom
+                    </h4>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto sed hic libero.
+                    </p>
+                </a>
+                <a class="news-grid-container" href="#">
+                    <div class="date">
+                        <h4>17 <span>Mar</span></h4>
+                    </div>
+                    <img src="images/ChatGPT.png" alt="Chat GPT">
+                    <p>
+                        Business
+                    </p>
+                    <h4>
+                        How To Implement Chat GPT In Your Projects
+                    </h4>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto sed hic libero.
+                    </p>
+                </a>
+                <a class="news-grid-container" href="#">
+                    <div class="date">
+                        <h4>13 <span>Mar</span></h4>
+                    </div>
+                    <img src="images/Books.png" alt="Books">
+                    <p>
+                        Business
+                    </p>
+                    <h4>
+                        The Guide To Support Modern CSS Design
+                    </h4>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto sed hic libero.
+                    </p>
+                </a>
+            </div>
+            <div class="dot-container">
+                <button id="here"></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
+        </div>
+    </section>
     <script>
         function myFunction() {
             if (document.getElementById("nav").style.display != "block"){
