Signup section finished

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <i class="fa-regular fa-envelope"></i>
                         info@crito.com
                     </div>
-                    <div id="location-social" class="info">
+                    <div class="info location-social">
                         <div class="location">
                             <i class="fa-sharp fa-regular fa-location-dot"></i>
                             Sveavägen 31, 111 34 STOCKHOLM
@@ -79,7 +79,6 @@
     </section>
     <section class="features-section">
         <div class="features-header">
-
             <div class="features-header-container">
                 <h6>
                     Features
@@ -87,7 +86,7 @@
                 <h2>
                     Our Accounting is trusted by thousands of companies
                 </h2>
-                <a id="learn-more" class="login-button" href="#">Learn More<i class="fa-solid fa-arrow-up-right"></i></a>
+                <a class="login-button" href="#">Learn More<i class="fa-solid fa-arrow-up-right"></i></a>
             </div>
         </div>
 
@@ -540,6 +539,18 @@
             </div>
         </div>
     </section>
+    <section class="signup-section">
+        <img src="images/LightElement.svg" alt="Decorative lines">
+        <div class="signup-section-container">
+            <h2>
+                Get News Updates By Signup
+            </h2>
+            <form>
+                <input type="email" id="email" name="email" title="Email" placeholder="username@domain.com">
+                <button type="submit" class="login-button">Subscribe<i class="fa-solid fa-arrow-up-right"></i></a>
+            </form>
+        </div>
+    </section>
     <script>
         function myFunction() {
             if (document.getElementById("nav").style.display != "block"){
@@ -550,6 +561,6 @@
                 document.getElementById("nav").style.display = "none";
             }
         }
-        </script>
+    </script>
 </body>
 </html>
