--- a/index.html
+++ b/index.html
@@ -551,6 +551,65 @@
             </form>
         </div>
     </section>
+    <footer>
+        <div class="footer-nav">
+            <div class="footer-about">
+                <img src="images/FooterLogo.svg" alt="Logo">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat obcaecati voluptas voluptates! Voluptates laborum nam ratione minus necessitatibus, iure praesentium.
+                </p>
+            </div>
+            <nav>
+                <div>
+                    <h4>Company</h4>
+                    <a href="#">About</a>
+                    <a href="#">Features</a>
+                    <a href="#">Works</a>
+                    <a href="#">Career</a>
+                </div>
+                <div>
+                    <h4>Help</h4>
+                    <a href="#">Customer Support</a>
+                    <a href="#">Delivery Details</a>
+                    <a href="#">Terms & Conditions</a>
+                    <a href="#">Privacy Policy</a>
+                </div>
+                <div>
+                    <h4>Resources</h4>
+                    <a href="#">Free eBooks</a>
+                    <a href="#">Development Tutorial</a>
+                    <a href="#">How To - Blog</a>
+                    <a href="#">Youtube Playlist</a>
+                </div>
+                <div>
+                    <h4>Links</h4>
+                    <a href="#">Free eBooks</a>
+                    <a href="#">Development Tutorial</a>
+                    <a href="#">How To - Blog</a>
+                    <a href="#">Youtube Playlist</a>
+                </div>
+            </nav>
+        </div>
+        <div class="footer-bottom">
+            <div class="footer-bottom-container">
+                <div class="social mobile">
+                    <a href="https://facebook.com"> <i class="fa-brands fa-facebook"></i></a>
+                     <a href="https://twitter.com"> <i class="fa-brands fa-x-twitter"></i></a>
+                     <a href="https://instagram.com"> <i class="fa-brands fa-instagram"></i></a>
+                     <a href="https://linkedin.com"> <i class="fa-brands fa-linkedin"></i></a>
+                 </div>
+                <p>
+                    © 2023 Crito - Consulting Company Inc. All Rights Reserved.
+                </p>
+                <div class="social">
+                    <a href="https://facebook.com"> <i class="fa-brands fa-facebook"></i></a>
+                     <a href="https://twitter.com"> <i class="fa-brands fa-x-twitter"></i></a>
+                     <a href="https://instagram.com"> <i class="fa-brands fa-instagram"></i></a>
+                     <a href="https://linkedin.com"> <i class="fa-brands fa-linkedin"></i></a>
+                 </div>
+            </div>
+        </div>
+    </footer>
     <script>
         function myFunction() {
             if (document.getElementById("nav").style.display != "block"){
