Contact page finished and validated

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a href="#" class="here">Home</a>
                         <a href="#">Service</a>
                         <a href="#">News</a>
-                        <a href="#">Contact</a>
+                        <a href="/contact/index.html">Contact</a>
                     </nav>
                     <a class="login-button" href="#">Login <i class="fa-solid fa-arrow-up-right"></i></a>
                 </div>
